# MyPlasmaCnc-Project

./: .gitignore  AGENTS.md  Build Portable Inspector.bat  Directory.Build.props  MyPlasm.Inspector.sln  README.md
.github/workflows/: protocol-recorder-windows.yml  windows-ci.yml
Old installed software/LOGS/: 2024_09_11.txt  2024_09_23.txt  2024_10_02.txt  2024_10_03.txt  2024_10_05.txt  2024_10_06.txt  2024_10_09.txt  2024_10_20.txt  2024_10_25.txt  2025_06_22.txt  2026_07_22.txt
Old installed software/PromaElektronika/MyMiniCAD/: user-settings.toml
Old installed software/PromaElektronika/MyMiniCAD/logs/: log.txt
Old installed software/PromaElektronika/MyPlasmCNC/LOGS/: 2024_08_24.txt  2024_09_28.txt  2024_10_04.txt  2024_10_10.txt  2024_10_11.txt  2024_10_17.txt  2024_10_23.txt  2024_11_03.txt  2025_03_30.txt  2026_07_22.txt
Old installed software/PromaElektronika/MyPlasmCNC/Plasma/: MyPlasmCNC.pfw
Old installed software/PromaElektronika/MyPlasmCNC/Plasma/STORE/: Last.plt  lng.cmp  par_Mild steel 3mm 65A  par_Mild steel 4mm 65A  store.fm5  store.fm6  store.fm7  store.fm8
Old installed software/PromaElektronika/MyPlasma3D/: config.toml  data.3d
Old installed software/PromaElektronika/MyPlasma3D/logs/: log.txt
Old installed software/STORE/: LastGood.fms  MyPlasmCNC.cnc  advanced.txt  store.fm1  store.fm4  store.fm9  temp.cnc
docs/: CODEX_START.md  LXD_SOFTWARE_PROJECT_SOURCE.md  PROJECT_SCOPE.md  PROTOCOL_NOTES.md  SAFETY.md  protocol-recorder.md
evidence/: README.md
native/: README.md
packaging/portable-win-x86/: Launch MyPlasm Inspector Diagnostic.bat  Launch MyPlasm Inspector.bat  README-FIRST.txt
scripts/: Build-PortableInspector.ps1  Test-ProductionNativeSafety.ps1
src/MyPlasm.Inspector.App/: App.xaml  App.xaml.cs  CaptureExporter.cs  MainWindow.xaml  MainWindow.xaml.cs  MyPlasm.Inspector.App.csproj  StartupLog.cs
src/MyPlasm.Inspector.Core/Safety/: AllowedCommandDefinition.cs  CommandIntent.cs  CommandRejectedException.cs  CommandSafetyDecision.cs  ControllerCommand.cs  DenyByDefaultCommandSafetyPolicy.cs  EvidenceClassification.cs  ICommandSafetyPolicy.cs  SafeControllerSession.cs
src/MyPlasm.Inspector.Core/Transport/: FtdiDeviceInfo.cs  IControllerTransport.cs  ManualInspectionController.cs  ValidatedCommand.cs
src/MyPlasm.Inspector.Transport.D2xx/: CaptureExporter.cs  D2xxDiagnostic.cs  D2xxInspectionTransport.cs  D2xxNativeDeviceInfo.cs  D2xxNativeLibrary.cs  D2xxSafeHandle.cs  D2xxStatus.cs  D2xxVersion.cs  ID2xxNativeApi.cs  IOriginalMyPlasmProcessDetector.cs  IPassiveCaptureClock.cs  PassiveCapture.cs  PassiveCaptureService.cs  PassiveD2xxSession.cs  PeFileInspector.cs  PeInspectionResult.cs
src/MyPlasm.Inspector.Transport.Fake/: FakeFtdiTransport.cs  MyPlasm.Inspector.Transport.Fake.csproj  TransmissionRecord.cs
tests/MyPlasm.Inspector.Tests/: D2xxInspectionTransportTests.cs  FakeFtdiTransportTests.cs  ManualInspectionControllerTests.cs  MyPlasm.Inspector.Tests.csproj  PassiveD2xxAcceptanceTests.cs  PeFileInspectorTests.cs  ProductionSafetyAuditTests.cs  SafeControllerSessionTests.cs  SafetyPolicyTests.cs
tools/: install-proxy.ps1  restore-original.ps1
tools/MyPlasm.Inspector.PeInspector/: MyPlasm.Inspector.PeInspector.csproj  Program.cs
tools/ftd2xx-protocol-recorder/: CMakeLists.txt
tools/ftd2xx-protocol-recorder/include/: ftd2xx_api.h  mock_contract.h
tools/ftd2xx-protocol-recorder/mock/: mock_ftd2xx.cpp  mock_ftd2xx.def  mock_ftd2xx_missing_export.def
tools/ftd2xx-protocol-recorder/proxy/: ftd2xx_proxy.def  proxy.cpp
tools/ftd2xx-protocol-recorder/tests/: run-case.ps1  test-install-restore.ps1  test_host.cpp  verify-exports.ps1
